--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="assets/dashboardstyle/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
   <script src="assets/dashboardstyle/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="assets/dashboardstyle/js/core/popper.min.js" type="text/javascript"></script>
@@ -20,6 +21,8 @@
   <script src="assets/dashboardstyle/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="assets/dashboardstyle/js/material-dashboard.js?v=2.1.0" type="text/javascript"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="bg-transparent">
   <app-root></app-root>
